# autocopy

./: .env.example  .gitignore  pyproject.toml  run.py  run.sh
app/: audio_util.py  frame_match.py  jianying.py  main.py  model_cache.py  settings.py  task_runner.py  tasks.py  tts_strip.py  vmf_match.py  workflow.py
app/copied/: match_tuil.py  srt_llm_rewriter.py  tts_srt_extractor.py
app/nodes/: __init__.py  dominant_speaker.py  jianying_export.py  jianying_merge.py  segment_asr.py  srt_rewrite.py  tts_extract.py  tts_generate.py  video_audio_extract.py  video_compose.py  video_input.py  video_match.py  video_match_vmf.py  vocal_separation.py  voice_vad.py
app/pipeline/: __init__.py  edge.py  executor.py  graph.py  node.py  types.py  validation.py
app/server/: database.py  main.py  websocket.py  workflow_templates.py
app/templates/: quick_chinese.json  quick_english.json  tts_only.json  tts_script_strip.json
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  i18n.ts  index.css  nodeSpecs.ts  types.ts
tests/: test_audio_util.py  test_frame_match.py  test_frontend_static.py  test_jianying.py  test_main_window.py  test_match_tuil.py  test_model_cache.py  test_settings.py  test_srt_llm_rewriter.py  test_tasks.py  test_tts_srt_extractor.py  test_tts_strip.py  test_vmf_match.py  test_workflow.py  test_workflow_templates.py
tests/test_nodes/: test_nodes.py
tests/test_pipeline/: test_edge.py  test_executor.py  test_graph.py  test_node.py  test_types.py
tests/test_server/: test_api.py  test_websocket.py
(+21 files in other folders)
