[project]
name = "tk-hot-copy"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "demucs>=4.0",
    "numpy>=1.26",
    "PyQt6>=6.7",
    "PyQt6-Fluent-Widgets>=1.7",
    "pycapcut>=0.0.3",
    "scipy>=1.11",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "aiosqlite>=0.20",
    "python-multipart>=0.0.18",
]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "httpx>=0.28",
]
