[project]
name = "tk-hot-copy"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "demucs>=4.0",
    "numpy>=1.26",
    "pycapcut>=0.0.3",
    "pywebview>=5.4",
    "scipy>=1.11",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "aiosqlite>=0.20",
    "python-multipart>=0.0.18",
    "torchcodec>=0.14.0",
    "pyannote-audio>=4.0.5",
    "video-match-finder",
]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[tool.uv.sources]
video-match-finder = { git = "https://github.com/Sinoosoida/video-match-finder" }

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "httpx>=0.28",
]
